--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devtools",
   "version": "1.0.0",
-  "description": "Dev tools",
+  "description": "Dev tools - tools to validate and generate cpf and cnpj",
   "productName": "Dev tools",
   "cordovaId": "net.fabioalmeida.devtools",
   "author": "fabioalmeida <fabiorecife@gmail.com>",
