--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fabioalmeida/cnpj": "^1.0.0",
     "@fabioalmeida/cpf": "^1.0.0",
     "@fabioalmeida/stringtobytearray": "^1.0.0",
+    "faker": "^4.1.0",
     "forge-dist": "github:fabiorecife/forge-dist",
     "he": "^1.1.1",
     "vuex": "^3.0.1"
