--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devtools",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "description": "Dev tools - tools to validate and generate cpf and cnpj",
   "productName": "Dev tools",
   "cordovaId": "net.fabioalmeida.devtools",
@@ -15,10 +15,12 @@
     "@fabioalmeida/cnpj": "^1.0.0",
     "@fabioalmeida/cpf": "^1.0.0",
     "@fabioalmeida/stringtobytearray": "^1.0.0",
+    "ejs": "^2.6.1",
     "faker": "^4.1.0",
     "forge-dist": "github:fabiorecife/forge-dist",
     "he": "^1.1.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.14.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
